Fixed some spacing issues.

--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,10 @@ nav {
   cursor: pointer;
 }
 
-
+.navbar-dark .navbar-nav .nav-link {
+  font-size: 1.3vw;
+  color: rgba(255,255,255,.5);
+}
 
 @media all and (max-width: 767px) {
   .header {
