--- a/src/components/Animation.css
+++ b/src/components/Animation.css
@@ -3,6 +3,7 @@
     border-radius: 2px;
     padding: 10px;
     margin-top: 210px;
+    margin-bottom: 50px;
     border: 1px rgb(230, 234, 236) solid;
 }
 
